Fixed navbar text wrap

--- a/statblocks/scss/04_component/navbar.scss
+++ b/statblocks/scss/04_component/navbar.scss
@@ -10,7 +10,9 @@
 
   &__item {
     display: inline-block;
+    white-space: nowrap;
     color: white;
+    flex-shrink: 0;
     padding: 5px 8px;
     cursor: pointer;
   }
